--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -9,6 +9,7 @@
 *::after {
   box-sizing: border-box;
   margin: 0;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   
 }
 
