--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -1,15 +1,19 @@
-
 :root {
-
 }
-
 
 *,
 *::before,
 *::after {
   box-sizing: border-box;
   margin: 0;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
+.container_builder {
+  border: dashed 2px #ccc;
+  position: relative;
+  margin: 10px 3px;
+  border-radius: 0.5rem;
+  height: 100%;
+}
