--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -17,3 +17,11 @@
   border-radius: 0.5rem;
   height: 100%;
 }
+
+.separator {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  gap: 8px;
+}
