--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -16,6 +16,7 @@
   margin: 10px 3px;
   border-radius: 0.5rem;
   height: 100%;
+  overflow: hidden;
 }
 
 .separator {
@@ -24,4 +25,46 @@
   justify-content: center;
   flex-direction: column;
   gap: 8px;
+}
+.container_builder:hover .btn_edit {
+  display: block;
+}
+
+textarea {
+  border: solid 2px #2b303a;
+  border-radius: 0.5rem;
+  width: 100%;
+  height: 150px;
+  resize: none;
+}
+/*****Scroll bar*****/
+
+::-webkit-scrollbar {
+  width: 5px;
+  height: 90%;
+  background-color: transparent;
+}
+
+::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #111827;
+  border-radius: 50px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #1f2937;
+}
+
+.link_builder {
+  text-decoration: none;
+  font-size: 16px;
+  background-color: #2b303a;
+  color: #e5eef0;
+  padding: 10px 16px;
+  border-radius: 0.25rem;
+  border: 0;
+  cursor: pointer;
 }
