--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -1,4 +1,8 @@
 :root {
+  --light: #e5eef0;
+  --white: #fcfcfc;
+  --primary-color: #518490;
+  --dark: #2b303a;
 }
 
 *,
@@ -8,6 +12,11 @@
   margin: 0;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+img {
+  max-width: 100%;
+  display: block;
 }
 
 .container_builder {
