--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -59,12 +59,12 @@ textarea {
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: #111827;
+  background-color: var(--dark);
   border-radius: 50px;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background-color: #1f2937;
+  background-color: var(--dark);
 }
 
 .link_builder {
@@ -76,4 +76,26 @@ textarea {
   border-radius: 0.25rem;
   border: 0;
   cursor: pointer;
+}
+
+.btn_edit {
+  position: absolute;
+  top: 4%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: none;
+  z-index: 250;
+}
+
+input {
+  border: solid 2px #2b303a;
+  border-radius: 0.5rem;
+  height: 35px;
+  padding: 5px;
+  width: 100%;
+}
+
+input[type="number"],
+input[type="color"] {
+  width: 30%;
 }
