--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -9,11 +9,24 @@
 *::before,
 *::after {
   box-sizing: border-box;
-  margin: 0;
+
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
+body {
+  margin: 0;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+p,
+a,
+li {
+  margin: 0;
+}
 img {
   max-width: 100%;
   display: block;
@@ -46,6 +59,7 @@ textarea {
   height: 150px;
   resize: none;
 }
+
 /*****Scroll bar*****/
 
 ::-webkit-scrollbar {
@@ -98,4 +112,8 @@ input {
 input[type="number"],
 input[type="color"] {
   width: 30%;
+}
+
+a {
+  text-decoration: none;
 }
